--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <div id="film_roll">
-            <img src="./film_roll_part.png">
-            <img src="./film_roll_part.png">
-            <img src="./film_roll_part.png">
-            <img src="./film_roll_part.png">
+            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087402096149659698/film_roll_part.png">
+            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087402096149659698/film_roll_part.png">
+            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087402096149659698/film_roll_part.png">
+            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087402096149659698/film_roll_part.png">
         </div>
         <div id="galleryNav_holder">
             <div class="galleryNav_holder_item">
