--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
         </div>
         <img id="bk_ball" src="https://cdn.discordapp.com/attachments/1066072940191416372/1066073041081217165/basketball_moon.png" alt="Kosárlabda">
         <script src="index.js"></script>
+        <script src="navbar.js"></script>
     </body>
 </html>
