--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -5,14 +5,23 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="gallery.css">
+        <link rel="stylesheet" href="./NavigationalBar/navbar.css">
         <title>Galéria</title>
     </head>
     <body>
+        <div id="navbar">
+            <a href="../index.html"><div class="nav_buttons"><p>Kezdő oldal</p></div></a>
+            <a href="./calendar.html"><div class="nav_buttons"><p>Naptár</p></div></a>
+            <a href="./participants.html"><div class="nav_buttons"><p>Résztvevők</p></div></a>
+            <a href="./match_result.html"><div class="nav_buttons"><p>Meccsek és eredmények</p></div></a>
+        </div>
+        <div id="navbar_call"><img src="https://cdn.discordapp.com/attachments/1066072940191416372/1088189464511254638/cog.png"></div>
+
         <div id="film_roll">
-            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087402096149659698/film_roll_part.png">
-            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087402096149659698/film_roll_part.png">
-            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087402096149659698/film_roll_part.png">
-            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087402096149659698/film_roll_part.png">
+            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087830422647492739/4x.jpg">
+            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087830422647492739/4x.jpg">
+            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087830422647492739/4x.jpg">
+            <img src="https://cdn.discordapp.com/attachments/1066072940191416372/1087830422647492739/4x.jpg">
         </div>
         <div id="galleryNav_holder">
             <div class="galleryNav_holder_item">
@@ -124,5 +133,6 @@
 
             });
         </script>
+        <script src="./NavigationalBar/navbar.js"></script>
     </body>
 </html>
