--- a/Pages/match_result.html
+++ b/Pages/match_result.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/1066072940191416372/1066073041081217165/basketball_moon.png" type="image/x-icon">
+        <link rel="stylesheet" href="./NavigationalBar/navbar.css">
         <title>Meccsek és eredmények</title>
     </head>
     <body>
@@ -77,6 +78,14 @@
                 text-shadow: 0px 0px 40px white;
             }
         </style>
+        <div id="navbar">
+            <a href="../index.html"><div class="nav_buttons"><p>Kezdő oldal</p></div></a>
+            <a href="./calendar.html"><div class="nav_buttons"><p>Naptár</p></div></a>
+            <a href="./participants.html"><div class="nav_buttons"><p>Résztvevők</p></div></a>
+            <a href="./gallery.html"><div class="nav_buttons"><p>Galéria</p></div></a>
+        </div>
+        <div id="navbar_call"><img src="https://cdn.discordapp.com/attachments/1066072940191416372/1088189464511254638/cog.png"></div>
+
         <div id="main_table">
             <div id="date">
                 <h1>Datum</h1>
@@ -97,5 +106,6 @@
                 <div>12 - 2</div>
             </div>
         </div>
+        <script src="./NavigationalBar/navbar.js"></script>
     </body>
 </html>
