--- a/Pages/participants.html
+++ b/Pages/participants.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-512.png" type="image/x-icon">
+        <link rel="stylesheet" href="./NavigationalBar/navbar.css">
         <title>Résztvevők</title>
     </head>
     <body>
@@ -116,6 +117,14 @@
                 overflow-x: auto;
             }
         </style>
+        <div id="navbar">
+            <a href="../index.html"><div class="nav_buttons"><p>Kezdő oldal</p></div></a>
+            <a href="./calendar.html"><div class="nav_buttons"><p>Naptár</p></div></a>
+            <a href="./match_result.html"><div class="nav_buttons"><p>Meccsek és eredmények</p></div></a>
+            <a href="./gallery.html"><div class="nav_buttons"><p>Galéria</p></div></a>
+        </div>
+        <div id="navbar_call"><img src="https://cdn.discordapp.com/attachments/1066072940191416372/1088189464511254638/cog.png"></div>
+
         <img id="basketball" src="https://cdn.discordapp.com/attachments/1066072940191416372/1066073041081217165/basketball_moon.png" alt="Kosárlabda">
         <div id="main_table">
             <div id="folder_tag">
@@ -184,5 +193,6 @@
                 
             }
         </script>
+        <script src="./NavigationalBar/navbar.js"></script>
     </body>
 </html>
