--- a/Pages/match_result.html
+++ b/Pages/match_result.html
@@ -14,7 +14,7 @@
             @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@600&display=swap');
             @font-face {
                 font-family: DoubleLine;
-                src: url('./WanderBrave-axBKK.ttf');
+                src: url('./Fonts/WanderBrave-axBKK.ttf');
             }
 
             body {
