--- a/Pages/calendar.html
+++ b/Pages/calendar.html
@@ -12,7 +12,7 @@
         <style>
             @font-face {
                 font-family: DigitalClock;
-                src: url("Digital7-rg1mL.ttf");
+                src: url("./Fonts/Digital7-rg1mL.ttf");
             }
             body {
                 background-image: url('https://cdn.discordapp.com/attachments/1066072940191416372/1084082191790784632/background_sidepage_4x.jpg');
